# golang/docs/swagger.json
@@ -2,16 +2,16 @@
     "swagger": "2.0",
     "info": {
         "description": "Spider shop Restfull API using Gin Framework, Gorm orm and other libraries",
-        "title": "SpiderShop-Restfull-API",
+        "title": "SpiderShop-Restfull-API yeah",
         "contact": {},
         "version": "1.0"
     },
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/ping": {
-            "get": {
-                "description": "do ping",
+        "/users": {
+            "post": {
+                "description": "user can able create new account",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,16 +19,99 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "users"
                 ],
-                "summary": "ping example",
+                "summary": "post users",
+                "parameters": [
+                    {
+                        "description": "User object that needs to be added",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.UserCreate"
+                        }
+                    }
+                ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/entity.UserJWTModel"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "501": {
+                        "description": "Not Implemented",
                         "schema": {
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "entity.UserCreate": {
+            "type": "object",
+            "properties": {
+                "account": {
+                    "type": "string"
+                },
+                "birth": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "mail": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "entity.UserJWTModel": {
+            "type": "object",
+            "properties": {
+                "account": {
+                    "type": "string"
+                },
+                "birth": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "mail": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         }
